# hs-logo

./: .gitignore  .travis.yml  Logo.hs  README.md  about.html  bootstrap_dev.sh  examples.html  hs-logo.cabal  index.html  installation.html
Diagrams/TwoD/Path/: Turtle.hs
Logo/: Builtins.hs  Evaluator.hs  TokenParser.hs  Turtle.hs  Types.hs
Logo/Builtins/: Arithmetic.hs  Control.hs  IO.hs  Turtle.hs
examples/: Turtles.hs  dahlia.logo  fan_flower.logo  five_rose.logo  hexagon2.logo  hypercube.logo  jaggy_star.logo  penta_star_spiral.logo  pentahexagon1.logo  polygon1.logo  polygon2.logo  rotating_circle.logo  spin_wheel1.logo
examples/sources/: hairy_star.logo  hexagon1.logo  moire.logo  pentagon.logo  pentahexagon.logo  shell.logo  spin_wheel2.logo  spin_wheel3.logo
site/: Site.hs  about.markdown  compile.sh  installation.markdown  intro.markdown
site/examples/: generate.sh
site/examples/sources/: brownian_motion.logo  bullring.logo  current.logo  design1.logo  feathers1.logo  feathers2.logo  gillyflower.logo  growing_scrolls1.logo  growing_scrolls2.logo  growing_scrolls3.logo  growing_scrolls4.logo  hairy_star.logo  hexagon.logo  low.logo  moire.logo  octa_star_spiral.logo  random_lines.logo  rose1.logo  rose2.logo  rose3.logo  scribble.logo  simple_flower.logo  slalom_scroll.logo  snowflake.logo  spiral.logo  sun.logo
site/templates/: example.html  examples.html  index.html  site.html
src/: Logo.hs
src/Diagrams/TwoD/Path/: Turtle.hs
src/Diagrams/TwoD/Path/Turtle/: Internal.hs
src/Logo/: Builtins.hs  Evaluator.hs  TokenParser.hs  Types.hs
src/Logo/Builtins/: Control.hs  Turtle.hs
tests/Diagrams/TwoD/Path/Turtle/: Tests.hs
