Name:                hs-logo
Version:             0.1
License:             BSD3
License-File:        LICENSE
Author:              Deepak Jois
Maintainer:          deepak.jois@gmail.com
Build-Type:          Simple
Synopsis:            Logo interpreter written in Haskell

Category:            Parser
Cabal-Version:       >=1.6
Data-Files:          README.md


Executable           Logo
  Ghc-Options:       -Wall -fno-warn-unused-do-bind
  Hs-Source-Dirs:    .
  Main-Is:           Logo.hs
  Build-Depends:     base        >= 3      && < 5,
                     containers  >= 0.3    && < 0.5,
                     parsec      >= 3.0    && < 3.2,
                     diagrams-lib, diagrams-cairo