Name:                hs-logo
Version:             0.1
License:             BSD3
License-File:        LICENSE
Author:              Deepak Jois
Maintainer:          deepak.jois@gmail.com
Build-Type:          Simple
Synopsis:            Logo interpreter written in Haskell

Category:            Parser
Cabal-Version:       >=1.6
Data-Files:          README.md


Executable           hs-logo
  Ghc-Options:       -Wall -fno-warn-unused-do-bind
  Hs-Source-Dirs:    .
  Main-Is:           Logo.hs
  Build-Depends:     base        >= 4.2      && <  4.6,
                     containers  >= 0.3    && <  0.5,
                     mtl         >= 1      && < 3.0,
                     parsec      >= 3.0    && <  3.2,
                     cmdargs     >= 0.6    && <= 0.9,
                     random      >= 1.0,
                     parsec-numbers,
                     diagrams-core >= 0.5 && < 0.6,
                     diagrams-lib >= 0.5 && < 0.6,
                     diagrams-cairo >= 0.5 && < 0.6